# mcp-switchboard

./: .gitignore  CHANGELOG.md  CHECKPOINT-1.md  CHECKPOINT-2.md  CONTRIBUTING.md  FINAL-REPORT.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  LICENSE  MANIFEST.in  MISSING-REQUIREMENTS.md  PROGRESS.md  PROJECT-COMPLETE.md  QUICKSTART.md  README.md  V1.0-COMPLETE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: API.md  DEPLOYMENT.md  MCP-CLIENT-CONFIG.md  USER-GUIDE.md
examples/: full_workflow.py
src/mcp_switchboard/: cache.py  cli.py  conflict.py  observability.py  prompts.py  server.py
src/mcp_switchboard/analyzer/: analyzer.py  llm_analyzer.py  parser.py
src/mcp_switchboard/config/: agent_detector.py  loader.py  models.py  registry.py  registry.yaml  writer.py
src/mcp_switchboard/credentials/: aws_sso.py  manager.py  oauth.py  token_store.py
src/mcp_switchboard/health/: validator.py
src/mcp_switchboard/lifecycle/: server_manager.py
src/mcp_switchboard/selector/: learning.py  selector.py
src/mcp_switchboard/state/: manager.py  schema.sql
src/mcp_switchboard/tools/: setup.py
src/mcp_switchboard/transports/: http_transport.py  launcher.py  sse_transport.py
tests/: benchmark.py  test_advanced.py  test_analyzer.py  test_config.py  test_credentials.py  test_integration.py  test_lifecycle.py  test_llm_analyzer.py  test_mcp_server.py  test_parser.py  test_selector.py  test_server.py  test_server_manager.py  test_setup.py  test_state.py  test_transports.py
(+3 files in other folders)
